[package]
name = "diesel_citext"
version = "0.1.0"
authors = ["Greg Elenbaas <me@gregelenbaas.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/gregelenbaas/diesel-citext"
documentation = "https://docs.rs/diesel-citext"
description = "Diesel support for citext type"
keywords = ["database", "sql", "orm", "citext", "diesel"]
categories = ["database"]

[dependencies]
diesel = { version = "1.3", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"], optional = true }
