[package]
name = "diesel-citext"
version = "0.2.0"
authors = ["Greg Elenbaas <me@gregelenbaas.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/gregelenbaas/diesel-citext"
documentation = "https://docs.rs/diesel-citext"
description = "Diesel support for citext type"
keywords = ["database", "sql", "orm", "citext", "diesel"]
categories = ["database"]

[features]

with-actix-web = ["actix-web"]

[dependencies]
actix-web = { version = "0.7", optional = true }
diesel = { version = "1.3", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"]}

